# overdue-ai

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-DATA  README.md  astro.config.mjs  package-lock.json  package.json
.github/workflows/: deploy-newbox.yml  deploy.yml  verify-sources.yml  watch.yml
.watcher/: state.json  watchlist.json
.watcher/snapshots/: anthropic-rsp.txt  deepmind-responsibility.txt  eu-ai-act-timeline.txt  metr-fsp.txt  openai-preparedness.txt
docs/launch/: 2026-06-18-overdue-launch.md
docs/runbooks/: m4-hosting.md  m4-subscribe.md  m5-email.md
scripts/: adjudicate.mjs  watch.ts
scripts/lib/: claude.mjs
server/subscribe/: emailer.py  index.mjs  notify.py  package.json  pyproject.toml  send_update.py  subscribe.mjs  subscribe_server.py  subscribers.py
server/subscribe/tests/: test_emailer.py  test_send_update.py  test_subscribe_server.py  test_subscribers.py
src/components/: CommitmentCard.astro  LabCard.astro  Nav.astro  RegulatoryItem.astro  StatusChip.astro  Subscribe.astro  SummaryStats.astro
src/data/: commitments.ts  updates.ts  verification.json
src/lib/: csv.ts  feed.ts  labs.ts  site.ts  sources.ts  status.ts  types.ts  updates.ts  (+2 more)
tests/: adjudicate.test.ts  data.test.ts  exports.test.ts  m6.test.ts  status-trigger.test.ts  status.test.ts  subscribe.test.ts  updates.test.ts  verify-checks.test.ts  verify-classify.test.ts  verify-fetch.test.ts  verify-fulfillment.test.ts  verify-invariants.test.ts  verify-loader.test.ts  verify-merge.test.ts  verify-pdf.test.ts  verify-staleness.test.ts  watch.test.ts  wayback.test.ts
(+48 files in other folders)
